# dronerl

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
config/: custom_level.yaml  logging_config.json  rate_limits.json  settings.yaml  setup.json
docs/: ARCHITECTURE.md  PLAN.md  PRD.md  PRD_q_learning.md  PROMPTS.md  TODO.md
notebooks/: analysis.ipynb
results/: benchmarks.json  convergence_test.json  index.html
src/dronerl/: __init__.py  _gui_runner.py  _sdk_helpers.py  constants.py  main.py  sdk.py
src/dronerl/agent/: __init__.py  agent.py  policy.py  q_table.py
src/dronerl/environment/: __init__.py  env.py  grid.py  rewards.py  wind.py
src/dronerl/gui/: __init__.py  _editor_draw.py  arrows.py  dashboard.py  heatmap.py  level_editor.py  renderer.py
src/dronerl/shared/: __init__.py  config.py  gatekeeper.py  logger.py  version.py
src/gridworld/: __init__.py  constants.py  main.py
src/gridworld/sdk/: __init__.py  sdk.py
src/gridworld/services/: __init__.py  agent.py  environment.py  trainer.py  visualiser.py
src/gridworld/shared/: __init__.py  config.py  gatekeeper.py  version.py
tests/: conftest.py
tests/integration/: test_full_experiment.py  test_training_loop.py
tests/unit/: test_config.py  test_constants.py  test_dronerl_agent.py  test_env.py  test_extended.py  test_gatekeeper.py  test_grid.py  test_gui_smoke.py  test_logger.py  test_policy.py  test_q_table.py  test_rewards.py  test_sdk.py  test_sdk_helpers.py  test_version.py  test_wind.py
tests/unit/test_agent/: test_agent.py
(+3 files in other folders)
