[project]
name = "dronerl"
version = "1.00"
description = "DroneRL — Smart City Drone Delivery via Q-Learning (BIU Deep RL Course)"
authors = [{ name = "hodayakashh" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.scripts]
dronerl = "dronerl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dronerl"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/dronerl --cov-report=term-missing --ignore=tests/integration/test_full_experiment.py"

[tool.coverage.run]
source = ["src/dronerl"]
omit = ["src/dronerl/main.py", "src/dronerl/_gui_runner.py", "*/tests/*", "src/**/gui/*"]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
